# pyvoices

./: CONTRIBUTING.md  README.md  RELEASING.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/pyvoices/: __init__.py  __main__.py  doculect.py
src/pyvoices/commands/: chunk.py
tests/: conftest.py  test_cli.py
tests/doculect/: doculect.TextGrid  doculect.xlsx
