[metadata]
name = pyvoices
version = 0.2.0
author = Robert Forkel and Hans-Jörg Bibiko
author_email = dlce.rdm@eva.mpg.de
description = Python library to curate "* Voices" data
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_files = LICENSE
url = https://github.com/dlce-eva/pyvoices
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    csvw>=3.1.3
    cldfcatalog>=1.5.1
    clldutils>=3.20.0
    pycldf>=1.28.0
    openpyxl>=3.1.2
    pydub>=0.25.1
    praatio>=6.0.1
    pympi-ling>=1.70.2
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    voices = pyvoices.__main__:main

[options.extras_require]
dev =
    build
    tox
    flake8
    wheel>=0.36
    twine
test =
    pytest>=7
    pytest-mock
    pytest-cov
    coverage>=7


[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    pyvoices
    tests

[coverage:report]
show_missing = true

[tox:tox]
envlist = py38, py39, py310, py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
